--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Billy Jacoby <billyjacoby@gmail.com>",
   "dependencies": {
+    "@stripe/stripe-js": "^1.11.0",
     "bootstrap": "^4.3.1",
     "dotenv": "^8.2.0",
     "gatsby": "^2.3.34",
@@ -24,7 +25,8 @@
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
-    "react-icons": "^3.6.1"
+    "react-icons": "^3.6.1",
+    "use-shopping-cart": "^2.1.0"
   },
   "devDependencies": {
     "gh-pages": "^2.0.1",
