--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
     "react-icons": "^3.6.1",
+    "smooth-scroll": "^16.1.3",
     "use-shopping-cart": "^2.1.0"
   },
   "devDependencies": {
