--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Billy Jacoby <billyjacoby@gmail.com>",
   "dependencies": {
     "@stripe/stripe-js": "^1.11.0",
+    "animate.css": "^4.1.1",
     "bootstrap": "^4.3.1",
     "dotenv": "^8.2.0",
     "gatsby": "^2.3.34",
@@ -22,6 +23,7 @@
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
+    "react-animate-on-scroll": "^2.1.5",
     "react-bootstrap": "^1.0.0-beta.8",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.0",
