--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-sharp": "^2.0.35",
     "gatsby-plugin-stripe": "^1.2.4",
     "gatsby-source-filesystem": "^2.0.33",
+    "gatsby-source-instagram": "^0.9.0",
     "gatsby-source-stripe": "^3.1.1",
     "gatsby-transformer-sharp": "^2.1.18",
     "node-sass": "^4.12.0",
